# Ros

./: Dockerfile  README.md  base_test.launch  build.bat  build.sh  howToStartLocalization.txt  howToStartMapping.txt  loadMap.sh  saveMap.sh  startAmcl.sh  startLidar.sh  startMapping.sh  startRosBag.sh  startTf.sh
amcl-matlab-old/devel/: .catkin
amcl-matlab-old/install/: .rosinstall
amcl-matlab-old/msgdef/: geometry_msgs_PoseWithCovarianceStruct.m  geometry_msgs_TwistWithCovarianceStruct.m  nav_msgs_OdometryStruct.m  sensor_msgs_LaserScanStruct.m
amcl-matlab-old/src/amcl_test/: CMakeLists.txt  package.xml
amcl-matlab-old/src/amcl_test/include/amcl_test/: CircularBufferIndex.h  MonteCarloLocalizationBuiltins.h  SharedMapProperties.h  Subscriber.h  amcl_test_rtwutil.h  amcl_test_terminate.h  amcl_test_types.h  binaryOccupancyMap.h  geometry_msgs_PoseWithCovarianceStruct.h  geometry_msgs_TwistWithCovarianceStruct.h  geometry_msgs_Vector3Struct.h  minOrMax.h  monteCarloLocalization.h  nav_msgs_OdometryStruct.h  ros_TimeStruct.h  ros_structmsg_conversion.h  rtGetInf.h  rtGetNaN.h  wrapTo2Pi.h
amcl-matlab-old/src/amcl_test/src/: Subscriber.cpp  amcl_test_rtwutil.cpp  geometry_msgs_TransformStruct.cpp  geometry_msgs_TwistStruct.cpp  minOrMax.cpp  nav_msgs_OdometryStruct.cpp  ros_structmsg_conversion.cpp  sensor_msgs_LaserScanStruct.cpp  std_msgs_HeaderStruct.cpp  wrapTo2Pi.cpp  wrapToPi.cpp
amcl-matlab/codegen/exe/amcl_test/: buildInfo.mat  codeInfo.mat  codedescriptor.dmr  codertarget_assembly_flags.mk  compileInfo.mat  ixfun.cpp  mod.h  nullAssignment.h  rosModelInfo.mat  rosReadBinaryOccupancyGrid.cpp  rosReadBinaryOccupancyGrid.h  sort.h
amcl-matlab/codegen/exe/amcl_test/html/: report.mldatx
amcl-matlab/codegen/exe/amcl_test/interface/: _coder_amcl_test_api.cpp  _coder_amcl_test_api.h  _coder_amcl_test_info.cpp  _coder_amcl_test_info.h  _coder_amcl_test_mex.cpp  _coder_amcl_test_mex.h
amcl-matlab/devel/: .rosinstall  setup.bat
amcl-matlab/devel/lib/: amcl_test.exp  amcl_test.lib
amcl-matlab/devel/lib/pkgconfig/: amcl_test.pc
amcl-matlab/devel/share/amcl_test/cmake/: amcl_testConfig.cmake
amcl-matlab/devel/src/amcl_test/: CMakeLists.txt  packageInfo.mat
amcl-matlab/devel/src/amcl_test/include/amcl_test/: CircularBufferIndex.h  MapLayer.h  MonteCarloLocalizationBuildable.h  amcl_test.h  amcl_test_initialize.h  amcl_test_types.h  geometry_msgs_PoseStruct.h  geometry_msgs_QuaternionStruct.h  ixfun.h  likelihoodFieldSensorModel.h  mlroscpp_msgconvert_utils.h  monteCarloLocalization.h  nav_msgs_OccupancyGridStruct.h  ros_structmsg_conversion.h  rt_nonfinite.h  rtwtypes.h  visibility_control.h  wrapTo2Pi.h
amcl-matlab/devel/src/amcl_test/src/: CircularBuffer.cpp  MapLayer.cpp  MonteCarloLocalizationBuildable.cpp  MonteCarloLocalizationBuiltins.cpp  amcl_test_initialize.cpp  geometry_msgs_PoseStruct.cpp  rosReadLidarScan.cpp  rtGetInf.cpp  wrapTo2Pi.cpp
amcl-matlab/install/: setup.bat
amcl-matlab/install/lib/pkgconfig/: amcl_test.pc
amcl-matlab/install/share/amcl_test/: package.xml
amcl-matlab/install/share/amcl_test/cmake/: amcl_testConfig.cmake
amcl-matlab/msgdef/: geometry_msgs_PointStampedStruct.m  geometry_msgs_TransformStampedStruct.m  geometry_msgs_TransformStruct.m  geometry_msgs_TwistStruct.m  nav_msgs_MapMetaDataStruct.m  nav_msgs_OccupancyGridStruct.m
amcl-matlab/src/amcl_test/: packageInfo.mat
amcl-matlab/src/amcl_test/include/amcl_test/: CircularBuffer.h  Publisher.h  SharedMapProperties.h  SpecialMsgUtil.h  Subscriber.h  TransformationTree.h  amcl_test_data.h  binaryOccupancyMap.h  geometry_msgs_PointStampedStruct.h  geometry_msgs_PointStruct.h  geometry_msgs_TransformStampedStruct.h  geometry_msgs_TransformStruct.h  geometry_msgs_TwistStruct.h  lidarScan.h  mlroscpp_msgconvert_utils.h  nav_msgs_MapMetaDataStruct.h  odometryMotionModel.h  quat2eul.h  rosReadCartesian.h  rosReadLidarScan.h  rosReadScanAngles.h  rt_defines.h  sensor_msgs_LaserScanStruct.h  std_msgs_HeaderStruct.h  visibility_control.h  wrapToPi.h
amcl-matlab/src/amcl_test/src/: Publisher.cpp  SpecialMsgUtil.cpp  Subscriber.cpp  TransformationTree.cpp  amcl_pf_vector.c  amcl_test.cpp  amcl_test_terminate.cpp  binaryOccupancyMap.cpp  geometry_msgs_PointStampedStruct.cpp  geometry_msgs_PointStruct.cpp  geometry_msgs_PoseWithCovarianceStruct.cpp  geometry_msgs_QuaternionStruct.cpp  geometry_msgs_TransformStampedStruct.cpp  geometry_msgs_TwistWithCovarianceStruct.cpp  geometry_msgs_Vector3Struct.cpp  lidarScan.cpp  main.cpp  mclcodegen_api.cpp  mod.cpp  monteCarloLocalization.cpp  nav_msgs_MapMetaDataStruct.cpp  nav_msgs_OccupancyGridStruct.cpp  nullAssignment.cpp  odometryMotionModel.cpp  quat2eul.cpp  rosReadCartesian.cpp  rosReadScanAngles.cpp  ros_TimeStruct.cpp  ros_structmsg_conversion.cpp  rtGetNaN.cpp  rt_nonfinite.cpp  rtw_proj.tmw  sort.cpp  wrapToPi.cpp
